--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,21 +1,19 @@
 @include adaptive-before-phone {
- 
   .hero .container {
-      width: 320px;
-      padding: 0;
-      margin: 0 auto;
+    width: 320px;
+    padding: 0;
+    margin: 0 auto;
   }
 }
 
-.hero .container{background-color: var(--colorful-bg-color-one);
-    position: relative;
-  }
+.hero .container {
+  background-color: var(--colorful-bg-color-one);
+  position: relative;
+}
 
 .hero {
- 
- 
   background-color: var(--colorful-bg-color-one);
-  }
+}
 
 .hero-title {
   font-family: Titan One;
@@ -56,32 +54,25 @@
 .info-button:hover,
 .info-button:focus {
   color: var(--primary-light-color);
-  background-color:var(--accent-color);
+  background-color: var(--accent-color);
 }
 
 .wrapper-container {
   position: absolute;
-  
+
   left: 20px;
   transform: translatey(50%);
 }
 
-
-
-
-
-    .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-mobile.png);
-    display:flex;
-background-repeat: no-repeat;
-background-position: right top;
-justify-content: space-around;
-
-
-
- }
+.ice-cream-picture {
+  background-image: url(../images/hero/hero-circle-big-mobile.png);
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: right top;
+  justify-content: space-around;
+}
 
 @media screen and (max-width: 767px) {
-
   .hero-paragraph {
     display: none;
   }
@@ -91,253 +82,241 @@ justify-content: space-around;
   .girl-so-tasty {
     display: none;
   }
-  .hero-button{display: none;}
+  .hero-button {
+    display: none;
+  }
 
-  .counter-container{display: none;}
-}
-@include adaptive-for-phone {
-  
-  .container {
-      width: 480px;
-      padding: 0 20px;
+  .counter-container {
+    display: none;
   }
 }
-
-
+@include adaptive-for-phone {
+  .container {
+    width: 480px;
+    padding: 0 20px;
+  }
+}
 
 @include adaptive-for-tablet {
   .container {
-      width: 700px;
-      padding: 0 34px;}
-
-
-
- .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-tablet.png);
-min-width: 324px;
-display: inline-flex;
-background-repeat: no-repeat;
-position: absolute;
-bottom: 0;
-justify-content:center;
-
-
-}
-
-
-
-     .hero-paragraph{
-width: 122px;
-height: 48px;
-font-weight: 400;
-font-size: 8px;
-line-height: 1.5;
-color: var(--primary-light-color);
-}
-
-.hero-button{width: 18px;
-  border-radius: 50%;
-  flex-wrap: wrap;
-  display: block;
-  align-items: center;
-  display: flex;
-height: 18px;
-
- &:hover,
-  &:focus {
-    cursor: pointer;
-    background-color: var(--accent-color);
-    transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    transform: scale(1.3);
-  }}
-
-.hero-button-icon{width: 7px;
-height: 7px;
-fill: var(--accent-color);
-.hero-button:focus &,
-.hero-button:hover &{ fill: var(--primary-light-color);}
-
-}
-
-.hero-paragraph-wrapper{
-  margin-top: 34px;
-  
-}
-
-.hero-button{margin-top: 7px;}
-
-
-
-.milk-decanter-wrapper{display: inline-flex;
-align-items:center;
-margin-top:19px;
-
-}
-.hero-left-side{display: inline-flex;
-flex-direction: column;
-transform: translateY(0);
-
-}
-   
-
-.hero-title{
-
-font-weight: 400;
-font-size: 22px;
-line-height: 1.136;
-width: 162px;
-height: 80px;
-
-}
-.hero-title-theme-accent{
-
-font-weight: 400;
-font-size: 34px;
-line-height: 90.5%;
-}
-
-.girl-so-tasty{
-display:inline-flex;
-position: absolute;
-right: 34px;
-bottom: 0%;
-}
-
-.wrapper-container{position: relative;
-transform: translateY(0);
-  display: inline-block;
-  bottom: -15px;
- left: 0;
-}
-
-.counter-container{display: inline-flex;
-flex-direction: column;
-position: absolute;
-right: 34px;
-top: 14px;
-
-}
-
-.cafes-counter, .trucks-counter{font-family: Titan One;
-
-font-weight: 400;
-font-size: 28px;
-line-height: 1.142;
-letter-spacing: 0.04em;
-text-transform: uppercase;
-color: var(--accent-color);
-background-image: url(../images/hero/counter-circle-tablet.png);
-background-repeat: no-repeat;
-background-position: top right ;
-}
-
-.cafes-counter-description, .trucks-counter-description{
-font-weight: 400;
-font-size: 8px;
-line-height: 1.25;
-color: var( --primary-light-bg-color);
-}
-
-
-
+    width: 700px;
+    padding: 0 34px;
   }
 
+  .ice-cream-picture {
+    background-image: url(../images/hero/hero-circle-big-tablet.png);
+    min-width: 324px;
+    display: inline-flex;
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+  }
 
-    
+  .hero-paragraph {
+    width: 122px;
+    height: 48px;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.5;
+    color: var(--primary-light-color);
+  }
 
+  .hero-button {
+    width: 18px;
+    border-radius: 50%;
+    flex-wrap: wrap;
+    display: block;
+    align-items: center;
+    display: flex;
+    height: 18px;
 
+    &:hover,
+    &:focus {
+      cursor: pointer;
+      background-color: var(--accent-color);
+      transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1);
 
+      transform: scale(1.3);
+    }
+  }
+
+  .hero-button-icon {
+    width: 7px;
+    height: 7px;
+    fill: var(--accent-color);
+    .hero-button:focus &,
+    .hero-button:hover & {
+      fill: var(--primary-light-color);
+    }
+  }
+
+  .hero-paragraph-wrapper {
+    margin-top: 34px;
+  }
+
+  .hero-button {
+    margin-top: 7px;
+  }
+
+  .milk-decanter-wrapper {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 19px;
+  }
+  .hero-left-side {
+    display: inline-flex;
+    flex-direction: column;
+    transform: translateY(0);
+  }
+
+  .hero-title {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 1.136;
+    width: 162px;
+    height: 80px;
+  }
+  .hero-title-theme-accent {
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 90.5%;
+  }
+
+  .girl-so-tasty {
+    display: inline-flex;
+    position: absolute;
+    right: 34px;
+    bottom: 0%;
+  }
+
+  .wrapper-container {
+    position: relative;
+    transform: translateY(0);
+    display: inline-block;
+    bottom: -15px;
+    left: 0;
+  }
+
+  .counter-container {
+    display: inline-flex;
+    flex-direction: column;
+    position: absolute;
+    right: 34px;
+    top: 14px;
+  }
+
+  .cafes-counter,
+  .trucks-counter {
+    font-family: Titan One;
+
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 1.142;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    background-image: url(../images/hero/counter-circle-tablet.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+  }
+
+  .cafes-counter-description,
+  .trucks-counter-description {
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.25;
+    color: var(--primary-light-bg-color);
+  }
+}
 
 @include adaptive-for-desktop {
   .container {
-      width: 1130px;
-      padding: 0 75px;
-   }
+    width: 1130px;
+    padding: 0 75px;
+  }
 
-   .hero-title{font-size: 38px;
-line-height: 1.157;
-width: 277px;
-height: 137px;}
- 
-.hero-title-theme-accent{font-size: 58px;
-line-height: 90.5%;}
+  .hero-title {
+    font-size: 38px;
+    line-height: 1.157;
+    width: 277px;
+    height: 137px;
+  }
 
-.info-button{font-size: 14px;
-line-height: 1.285;}
+  .hero-title-theme-accent {
+    font-size: 58px;
+    line-height: 90.5%;
+  }
 
-.hero-paragraph{font-size: 14px;
-line-height: 1.428;
-width: 200px;
-height: 78px;
+  .info-button {
+    font-size: 14px;
+    line-height: 1.285;
+  }
+
+  .hero-paragraph {
+    font-size: 14px;
+    line-height: 1.428;
+    width: 200px;
+    height: 78px;
+  }
+
+  .hero-button {
+    width: 26px;
+    justify-content: center;
+    height: 26px;
+  }
+
+  .hero-button-icon {
+    width: 10px;
+    height: 10px;
+  }
+
+  .counter-container {
+    right: 75px;
+    top: 78px;
+  }
+
+  .cafes-counter,
+  .trucks-counter {
+    font-size: 46px;
+    line-height: 1.152;
+    background-image: url(../images/hero/counter-circle-desktop.png);
+  }
+
+  .cafes-counter-description,
+  .trucks-counter-description {
+    font-size: 14px;
+    line-height: 1.285;
+  }
+
+  .wrapper-container {
+    left: 40px;
+  }
+
+  .milk-decanter-wrapper {
+    margin-top: 56px;
+    margin-bottom: 45px;
+  }
+
+  .ice-cream-picture {
+    background-image: url(../images/hero/hero-circle-big-desktop.png);
+    width: 538px;
+    height: 538px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    position: absolute;
+  }
+
+  .hero-left-side {
+    display: inline-flex;
+    flex-direction: column;
+
+    left: 40px;
+  }
+
+  .girl-so-tasty {
+    display: inline-flex;
+    position: absolute;
+    right: 75px;
+  }
 }
-
-.hero-button{width: 26px;
-  justify-content: center;
- height: 26px;}
-
- .hero-button-icon{width: 10px;
-height: 10px;}
-
-.counter-container{
-right: 75px;
-top: 78px;
-
-}
-
-.cafes-counter, .trucks-counter{
-font-size: 46px;
-line-height: 1.152;
-background-image: url(../images/hero/counter-circle-desktop.png);
-
-
-
-}
-
-
-
-.cafes-counter-description, .trucks-counter-description{
-font-size: 14px;
-line-height: 1.285;
-}
-
-.wrapper-container{left:40px}
-
-
-.milk-decanter-wrapper{margin-top: 56px;
-margin-bottom: 45px;}
-
-      .ice-cream-picture{background-image: url(../images/hero/hero-circle-big-desktop.png);
-width:538px;
-height: 538px;
-background-position: 50% 50%;
-background-repeat: no-repeat;
-position:absolute;
-
-
-
-}
-
-
-
-
-
-
-.hero-left-side{display: inline-flex;
-flex-direction: column;
-
-left: 40px;
-
-}
-
-.girl-so-tasty{
-display:inline-flex;
-position: absolute;
-right: 75px;
-
-}
-
-  
-}
-
-  
-  
