--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -13,9 +13,8 @@
 
         <div class="products-svg-ice-cream">
           <p class="products-ice-cream-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et. dolore magna aliqua
-            facilisis.
+            Sweet, creamy frozen food made from various flavored cream and milk
+            products stirred to a smooth consistency.
           </p>
         </div>
         <div class="dropdown-menu">
@@ -24,12 +23,7 @@
               <use href="./images/sprite.svg#right"></use>
             </svg>
           </button>
-          <p class="dropdown-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id libero
-            porro repellendus quis in error ullam asperiores, dolorem nesciunt
-            non, beatae magnam architecto ad impedit est, deserunt delectus
-            minus earum!
-          </p>
+          <p class="dropdown-description">Ice, ice baby</p>
         </div>
       </li>
       <li class="products-item list ice-coffee">
@@ -39,17 +33,18 @@
 
         <div class="products-svg-ice-cream">
           <p class="products-ice-cream-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et. dolore magna aliqua
-            facilisis.
+            Type of coffee beverage served chilled, brewed variously with the
+            fundamental division being cold brew.
           </p>
         </div>
-
-        <button class="products-btn">
-          <svg class="products-ice-cream-icon">
-            <use href="./images/sprite.svg#right"></use>
-          </svg>
-        </button>
+        <div class="dropdown-menu">
+          <button class="products-btn">
+            <svg class="products-ice-cream-icon">
+              <use href="./images/sprite.svg#right"></use>
+            </svg>
+          </button>
+          <p class="dropdown-description">Vanilla Ice, ice baby</p>
+        </div>
       </li>
       <li class="products-item list milkshakes">
         <div class="products-img">
@@ -58,17 +53,19 @@
 
         <div class="products-svg-ice-cream">
           <p class="products-ice-cream-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et. dolore magna aliqua
-            facilisis.
+            Sweet drink made by blending milk, ice cream, and flavorings such as
+            fruit syrup, or whole fruit into a thick, sweet, cold mixture.
           </p>
         </div>
+        <div class="dropdown-menu">
+          <button class="products-btn">
+            <svg class="products-ice-cream-icon">
+              <use href="./images/sprite.svg#right"></use>
+            </svg>
+          </button>
 
-        <button class="products-btn">
-          <svg class="products-ice-cream-icon">
-            <use href="./images/sprite.svg#right"></use>
-          </svg>
-        </button>
+          <p class="dropdown-description">Ice, ice baby, too cold, too cold</p>
+        </div>
       </li>
     </ul>
   </div>
