--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,41 +1,27 @@
 
-
-.links {
-  text-decoration: none;
-}
-
-.list {
-  list-style: none;
-}
-
-
 .container_cont {
-
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
 
     @media screen and(min-width: 768px) {
-      // width: 772px;
       width: 700px;
       padding-left: 36px;
       padding-right: 36px;
     }
+
     @media screen and(min-width: 1280px) {
-      // width: 772px;
       width: 1050px;
       padding-left: 115px;
       padding-right: 115px;
     }
 }
 
-/* Накидую стили  */
 
 .contacts {
   background: #fff5f6;
   background-repeat: no-repeat;
-  // background-size: cover;
   background-size: contain;
   background-position: center;
 
@@ -47,14 +33,15 @@
     padding-bottom: 158px;
     background: linear-gradient(180deg, rgba(255,255,255,1) 10%, rgba(255,245,246,1) 10%);
   }
+
   @media screen and(min-width: 1280px) {
-    
     padding-bottom: 165px;
-    // background-image: url('../images/bg.png');
     background: url('../images/bg.png'),  center, linear-gradient(180deg, rgba(255,255,255,1) 12%, rgba(255,245,246,1) 12%);
     }
 }
 
+
+/* Карты Городов */
 
 .wrapper-city {
   @media screen and(min-width: 768px) {
@@ -112,12 +99,8 @@
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 186%;
-
-  margin-bottom: 25px;
-
+  @include fw_fs_line-height-calc(500, 12, 22);
+  
   display: block;
   align-items: center;
   text-align: center;
@@ -125,14 +108,13 @@
 
   background: #f0d1a5;
   border-radius: 4px;
+  margin-bottom: 25px;
 
   color: #ffffff;
 
     @media screen and(min-width: 768px) {
       width: 73px;
-      
-      font-size: 16px;
-      line-height: 186%; 
+      @include fw_fs_line-height-calc(500, 16, 30);
       margin-bottom: 30px;
     }
 
@@ -144,64 +126,46 @@
 
 
 .contacts-list-item-titel {
-  /* width: 57px; */
   height: 22px;
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 186%;
+  @include fw_fs_line-height-calc(500, 12, 22);
+  
   margin-bottom: 10px;
-
   letter-spacing: 0.04em;
 
   color: #000000;
 
     @media screen and(min-width: 768px) {
-      // width: 58px;
       height: 26px;
-      font-size: 14px;
-      line-height: 186%;
+      @include fw_fs_line-height-calc(500, 14, 26);
        margin-bottom: 14px;
   }
 
     @media screen and(min-width: 1280px) {
-      // width: 66px;
       height: 30px;
-
-      font-size: 16px;
-      line-height: 186%;
+      @include fw_fs_line-height-calc(500, 16, 30);
        margin-bottom: 10px;
-
     }
 }
 
 .contacts-list-item-text {
   width: 179px;
-  // height: 36px;
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 18px;
+  @include fw_fs_line-height-calc(500, 12, 18);
 
   color: #907e82;
 
     @media screen and(min-width: 768px) {
       width: 145px;
-      // height: 65px;
-      font-size: 14px;
-      line-height: 166%;
-      /* or 23px */
+      @include fw_fs_line-height-calc(500, 14, 23);
 }
 
     @media screen and(min-width: 1280px) {
       width: 243px;
-      // height: 50px;
-      font-size: 16px;
-      line-height: 183%;
-      /* or 29px */
+      @include fw_fs_line-height-calc(500, 16, 29);
     }
   }
 
@@ -230,76 +194,60 @@
 
 
 .contacts-list-item-week {
-  // width: 107px;
   width: 100%;
   height: 22px;
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 186%;
+  @include fw_fs_line-height-calc(500, 12, 22);
 
   color: #000000;
 
      @media screen and(min-width: 768px) {
-      // width: 124px;
       height: 26px;
-     font-size: 14px;
-     line-height: 186%;
-     /* identical to box height, or 26px */
+      @include fw_fs_line-height-calc(500, 14, 26);
   }
 
-  
      @media screen and(min-width: 1280px) {
-      // width: 134px;
       height: 30px;
-      font-size: 16px;
-      /* identical to box height, or 30px */
+      @include fw_fs_line-height-calc(500, 16, 30);
       letter-spacing: 0.04em;
   }
 }
 
 .contacts-list-item-time {
-  // width: 162px;
   width: 100%;
   height: 23px;
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 186%;
+  @include fw_fs_line-height-calc(500, 12, 22);
 
   color: #ffa5ba;
 
      @media screen and(min-width: 768px) {  
-    //  width: 142px;
      height: 23px;
-     font-size: 14px;
-     /* or 26px */
-
+     @include fw_fs_line-height-calc(500, 14, 26);
   }
+
     @media screen and(min-width: 1280px) {
-      // width: 152px;
       height: 30px;
-      font-size: 16px;
+      @include fw_fs_line-height-calc(500, 16, 30);
       letter-spacing: 0.04em;
     }
 }
 
 .item-time {
   margin-bottom: 10px;
+
     @media screen and(min-width: 768px) {
       margin-bottom: 16px;
 }
 
       @media screen and(min-width: 1280px) {
       margin-bottom: 15px;
-
 }
 }
-
 
 
 .nav-list-item-link {
@@ -308,9 +256,7 @@
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 18px;
+  @include fw_fs_line-height-calc(500, 12, 18);
 
   color: #907e82;
   transition: color 250ms linear;
@@ -323,12 +269,11 @@
 
 .foodtruck {
   width: 130px;
-  /* height: 16px; */
   background: #c2e297;
   border-radius: 4px;
 }
 
-/* Кнопки  */
+/*=== Кнопки ===*/
 
 .locations {
   display: flex;
@@ -337,6 +282,8 @@
   justify-content: center;
 }
 
+/* 1- кнопка */
+
  .contacts-btn {
    min-width: 161px;
    height: 44px;
@@ -344,9 +291,8 @@
 
    font-family: DM Sans;
    font-style: normal;
-   font-weight: bold;
-   font-size: 16px;
-   line-height: 21px;
+   @include fw_fs_line-height-calc(700, 16, 21);
+
    border: 0;
    cursor: pointer;
    margin-bottom: 10px;
@@ -369,7 +315,6 @@
      }
 
  }
-
 
  .contacts-btn::after {
    content: '';
@@ -395,6 +340,8 @@
 }
 
 
+/* 2- кнопка */
+
 .franchise {
   min-width: 161px;
   height: 44px;
@@ -402,9 +349,8 @@
 
   font-family: DM Sans;
   font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 21px;
+  @include fw_fs_line-height-calc(700, 16, 21);
+
   border: 0;
   cursor: pointer;
   margin-bottom: 10px;
@@ -433,12 +379,8 @@
   margin-left: 10px;
   color: inherit;
   background-color: inherit;
-  /* border: 2px solid #ffffff; */
-
-   background-image: url('../images/icon/cont-vector.svg');
-
   background-size: contain;
-  
+  background-image: url('../images/icon/cont-vector.svg');
 }
 
 
