--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,73 +1,90 @@
 <section class="reviews">
   <div class="reviews-container">
     <h2 class="visually-hidden">Отзывы</h2>
-    <picture>
-      <source
-        srcset="./images/customer1.webp 1x, ./images/customer1@2x.webp 2x"
-        type="image/wedp"
-      />
-      <source
-        srcset="./images/customer1.png 1x, ./images/customer1@2x.png 2x"
-        type="image/wedp"
-      />
-      <img
-        class="reviews-images"
-        src="./images/customer1.png"
-        alt="костюмер-1"
-      />
-    </picture>
-    <div class="reviews-content">
-      <p class="reviews-content-text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
-    </div>
-    <p class="reviews-text-cont">Emily, Los Angeles</p>
-    <div class="reviews-slider">
-      <svg class="reviews-slider-icon" width="12" height="12">
-        <use href="./images/sprite.svg#icon-home"></use>
-      </svg>
-      <svg class="reviews-slider-icon" width="12" height="12">
-        <use href="./images/sprite.svg#icon-ellipse"></use>
-      </svg>
-      <svg class="reviews-slider-icon" width="12" height="12">
-        <use href="./images/sprite.svg#icon-ellipse"></use>
-      </svg>
-    </div>
-  </div>
-
   <div class="rev_slider">
     <div class="slider">
-      <div class="photo"></div>
-      <h2 class="name">Владислав</h2>
-      <div class="text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
-        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
-        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
-        obcaecati velit!
+      <div>
+        <picture>
+          <source
+            srcset="./images/customer1.webp 1x, ./images/customer1@2x.webp 2x"
+            type="image/wedp"
+          />
+          <source
+            srcset="./images/customer1.png 1x, ./images/customer1@2x.png 2x"
+            type="image/wedp"
+          />
+          <img
+            class="reviews-images"
+            src="./images/customer1.png"
+            alt="костюмер-1"
+          />
+        </picture>
       </div>
+      <div class="reviews-content">
+        <p class="reviews-content-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <p class="reviews-text-cont">Emily, Los Angeles</p>
     </div>
 
     <div class="slider">
-      <div class="photo"></div>
-      <h2 class="name">Владислав</h2>
-      <div class="text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
-        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
-        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
-        obcaecati velit!
+      <div>
+        <picture>
+          <source
+            srcset="./images/customer2.webp 1x, ./images/customer2@2x.webp 2x"
+            type="image/wedp"
+          />
+          <source
+            srcset="./images/customer2.png 1x, ./images/customer2@2x.png 2x"
+            type="image/wedp"
+          />
+          <img
+            class="reviews-images"
+            src="./images/customer2.png"
+            alt="костюмер-2"
+          />
+        </picture>
       </div>
+      <div class="reviews-content">
+        <p class="reviews-content-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <p class="reviews-text-cont">Debbie, New York</p>
     </div>
 
     <div class="slider">
-      <div class="photo"></div>
-      <h2 class="name">Владислав</h2>
-      <div class="text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
-        esse quo dicta officia beatae consectetur eum, voluptas iure molestiae,
-        debitis ipsam! Sequi pariatur aliquid quo suscipit odit. Necessitatibus,
-        obcaecati velit!
+      <div class="slider">
+        <div>
+          <picture>
+            <source
+              srcset="./images/customer3.webp 1x, ./images/customer3@2x.webp 2x"
+              type="image/wedp"
+            />
+            <source
+              srcset="./images/customer3.png 1x, ./images/customer3@2x.png 2x"
+              type="image/wedp"
+            />
+            <img
+              class="reviews-images"
+              src="./images/customer3.png"
+              alt="костюмер-3"
+            />
+          </picture>
+        </div>
+        <div class="reviews-content">
+          <p class="reviews-content-text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
+        <p class="reviews-text-cont">Samanta, Chicago</p>
       </div>
     </div>
   </div>
