--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <!--ABOUT-->
-<section class="about" id="about-us">
+<section class="about" id="how-made">
   <div class="about-container">
     <p class="about-label-title">tradition and love</p>
     <h2 class="about-title">how it’s made?</h2>
