--- a/src/partials/modal-header.html
+++ b/src/partials/modal-header.html
@@ -22,10 +22,10 @@
           <a href="#how-made" class="nav-link">How it's made?</a>
         </li>
         <li class="nav-item">
-          <a href="#Our-products" class="nav-link">Our products</a>
+          <a href="#our-products" class="nav-link">Our products</a>
         </li>
         <li class="nav-item">
-          <a href="#Contact" class="nav-link">Contact</a>
+          <a href="#contact" class="nav-link">Contact</a>
         </li>
       </ul>
     </nav>
