--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products-section" id="Our-products">
+<section class="products-section" id="our-products">
   <div class="products-conteiner">
     <p class="products-natural">100% natural</p>
     <h2 class="products-title">products</h2>
