--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,11 +2,16 @@
   width: 100%;
   margin: 0 auto;
 
+  @include adaptive-before-phone {
+  padding: 0 !important;    
+  }
   @include adaptive-for-phone {
     // width: 480px;
     padding: 0 5px;
   }
-
+  @include adaptive-before-tablet {
+  padding: 0 !important;
+  }
   @include adaptive-for-tablet {
     width: 730px;
     padding: 0 19px;
