--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,8 +1,8 @@
 .contacts {
   width: 100%;
-  padding-right: 50px;
+  // padding-right: 50px;
   padding-bottom: 56px;
-  padding-left: 50px;
+  // padding-left: 50px;
   text-align: center;
   font-family: DM Sans,sans-serif;
   font-size: 12px;
@@ -28,18 +28,18 @@
   justify-content: center;
   align-items: center;
   margin-top: -15px;
-  margin-right: -15px;
+  // margin-right: -15px;
   margin-bottom: 54px;
-  margin-left: -15px;
+  // margin-left: -15px;
 
 
   @include adaptive-for-tablet {
     flex-direction: row;
     padding: 0;
     margin-top: -15px;
-    margin-right: -15px;
+    // margin-right: -15px;
     margin-bottom: 54px;
-    margin-left: -15px;
+    // margin-left: -15px;
     margin-bottom: 80px;
   }
 
