--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,25 +1,25 @@
 .page-header {
   // position: absolute;
   // transform: translate();
-  background: transparent;
 
-  & .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  background: teal;
 }
 
-.site-nav {
+.page-header .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
+// .site-nav {
+// }
+
 .site-nav-logo {
-  position: relative;
-  display: inline-block;
-  padding: 23px 0px 23px 70px;
+  width: 199px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 6px 0;
 }
 
 .logo-img {
@@ -60,8 +60,17 @@
 }
 
 @media screen and (min-width: 768px) {
-  .page-header {
+  .site-nav-logo {
     padding: 37px 0;
+  }
+
+  .burger-btn {
+    margin-left: auto;
+    margin-right: 30px;
+  }
+
+  .burger-btn-icon {
+    height: 12px;
   }
 
   .modal-btn {
@@ -114,25 +123,27 @@
   .site-nav-list {
     display: none;
   }
-
-  .burger-btn {
-    margin-left: auto;
-    margin-right: 30px;
-  }
 }
 
 @media screen and (min-width: 1280px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .site-nav {
+    display: flex;
+    align-items: center;
+  }
+
   .site-nav-logo {
     position: static;
     padding-left: 0px;
   }
 
   .logo-img {
-    transform: translateX(50%);
-  }
-
-  .burger-btn {
-    display: none;
+    position: absolute;
+    left: 46px;
+    // transform: translateX(50%);
   }
 
   .site-nav-logo {
