--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -57,13 +57,13 @@
             position: absolute;
             width: 171px;
             top: 9px;
-            left: 30.31vw;
+            left: 34.642%;
         }
         .icecream-before:before{
             content: "";
             position: absolute;
             top: 0;
-            left: 5vw;
+            left: 5.714%;
             width: 346px;
             height: 346px;
             border-radius: 50%;
@@ -229,13 +229,13 @@
             position: absolute;
             width: 143px;
             bottom: 0;
-            left: 44.79vw;
+            left: 344px;
         }
         .icecream-before:before{
             content: "";
             position: absolute;
             bottom: 46px;
-            left: 35.546vw;
+            left: 273px;
             width: 324px;
             height: 324px;
             border-radius: 50%;
@@ -276,7 +276,7 @@
 
     } 
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
         .container{
             height: 515px;
             padding-top: 15px;
@@ -304,13 +304,13 @@
             width: 236px;
             height: 557px;
             bottom: 0;
-            left: 39.916vw;
+            left: 479px;
         }
         .icecream-before:before{
             content: "";
             position: absolute;
             bottom: 81px;
-            left: 30vw;
+            left: 360px;
             width: 538px;
             height: 538px;
             border-radius: 50%;
