--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,10 +7,10 @@
       </h1>
       <ul class="hero-list">
         <li class="hero-item">
-          <button class="button" type="button">Products</button>
+          <a class="button" href="#our-products">Products</a>
         </li>
         <li class="hero-item">
-          <button class="button" type="button">How it's made?</button>
+          <a class="button" href="#how-made">How it's made?</a>
         </li>
       </ul>
       <ul class="hero-description">
@@ -59,7 +59,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et
             </p>
-            <button class="button" type="button">
+            <button class="button-arrow" type="button">
               <svg class="arrow">
                 <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
