--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,7 +2,8 @@
 
 
 <section class="contacts-cards__section">
-    <div class="container">
+    <div class="dots-overlay">
+        <div class="container">
     <h2 class="contacts-cards__section-title visually-hidden">Cafe contacts</h2>
     <ul class="contacts-cards__list">
         <li class="contacts-cards__item">
@@ -100,5 +101,7 @@
    
     
     </div>
+</div>
+    
 </section>
 
