--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,6 +1,22 @@
 .contacts-cards__section {
-  background-image: linear-gradient(to bottom, #fff 35%, #fff 35%, #FFF5F6 65%, #FFF5F6 65%);
-  
+  background-image: linear-gradient(
+    to bottom,
+    #fff 7%,
+    #fff5f6 7%,
+    #fff5f6 93%
+  );
+  // @media screen and (max-width: 767px) {
+  //   padding-left: 30px;
+  //   padding-right: 30px;
+  // }
+  @media screen and (min-width: $desktop) {
+    background-image: linear-gradient(
+      to bottom,
+      #fff 25%,
+      #fff5f6 25%,
+      #fff5f6 75%
+    );
+  }
 }
 .contacts-cards__list {
   list-style: none;
@@ -11,13 +27,15 @@
     flex: wrap;
     margin: -10px;
   }
-  
+
+  @media screen and (min-width: $desktop) {
+    margin: -15px;
+  }
 }
 
 .contacts-cards__item {
   width: 100%;
-  height: 100%;
-  
+  // height: 100%;
   padding-top: 43px;
   padding-bottom: 43px;
   padding-left: 20px;
@@ -30,36 +48,28 @@
     &:not(:last-child) {
       margin-bottom: 20px;
     }
-    
   }
   @media screen and (min-width: $tablet) {
-      
-      padding-top: 50px;
-      padding-bottom: 50px;
-      padding-left: 31px;
-      padding-right: 32px;
-      margin: 10px;
-      width: calc((100% - 3*20px)/3);
-      
-    }
-  @media screen and (min-width: $desktop) {  
-       
-      padding-top: 50px;
-      padding-bottom: 50px;
-      padding-left: 44px;
-      padding-right: 43px;
-    }  
- 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 31px;
+    padding-right: 32px;
+    margin: 10px;
+    width: calc((100% - 3 * 20px) / 3);
+  }
+  @media screen and (min-width: $desktop) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 44px;
+    padding-right: 43px;
+    margin: 15px;
+    width: calc((100% - 3 * 30px) / 3);
+  }
 }
-
- 
-    
-
 
 .contacts-cards__main-title {
   text-align: center;
-  
-  
+
   margin-bottom: 25px;
   font-weight: 500;
   font-size: 12px;
@@ -74,14 +84,12 @@
   @media screen and (min-width: $tablet) {
     max-width: 73px;
     font-size: 16px;
-  line-height: 1.88;
+    line-height: 1.88;
   }
-
 }
 
 .contacts-cards__foodtruck {
-  
-  text-align:  center;
+  text-align: center;
   font-weight: 500;
   font-size: 12px;
   margin-bottom: 25px;
@@ -94,74 +102,59 @@
   border-radius: 4px;
   max-width: 130px;
   @media screen and (min-width: $tablet) {
-   max-width: 138px;
-    margin-bottom: 30px;
+    // max-width: 138px;
     font-size: 16px;
-  line-height: 1.88;
+    line-height: 1.88;
   }
-@media screen and (min-width: $desktop) {
-    
+  @media screen and (min-width: $desktop) {
     margin-bottom: 32px;
   }
 }
 
 .contactacts-cards__title {
-  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
   margin-bottom: 10px;
   letter-spacing: 0.04em;
   @media screen and (min-width: 768px) {
-    
     font-size: 14px;
-  line-height: 1.86;
+    line-height: 1.86;
   }
   @media screen and (min-width: 768px) {
-   
     font-size: 16px;
-  line-height: 1.88;
+    line-height: 1.88;
   }
 }
 
 .contacts-cards__text {
- width: 100%;
- 
- 
- 
+  width: 100%;
+
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
   margin-bottom: 50px;
   color: #907e82;
   @media screen and (min-width: $tablet) {
-    
     font-size: 14px;
-  line-height: 1.64;
+    line-height: 1.64;
   }
   @media screen and (min-width: $desktop) {
-   
     font-size: 16px;
-  line-height: 1.81;
-  letter-spacing: 0.04em;
+    line-height: 1.81;
+    letter-spacing: 0.04em;
   }
 }
 
-
-
-
 .contacts-cards__shedule-list {
-  max-width: 162px;
-  
-  
+  position: relative;
+
   margin-bottom: 50px;
-   @media screen and (min-width: 768px) {
-     margin-bottom: 60px;
-     max-width: 141px;
-   }
-   @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: $desktop) {
     margin-bottom: 64px;
-    max-width: 163px;
   }
 }
 
@@ -170,7 +163,6 @@
 }
 
 .contactacts-cards__shedule-title {
-  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.22;
@@ -178,51 +170,82 @@
   color: #000000;
   @media screen and (min-width: 768px) {
     font-size: 14px;
-  line-height: 1.86;
-     
-   }
-   @media screen and (min-width: $desktop) {
-   font-size: 16px;
-  line-height: 1.88;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.88;
   }
 }
 .contactacts-cards__shedule-text {
-  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
 
   color: #ffa5ba;
-   @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     font-size: 14px;
-  line-height: 1.86;
-     
-   }
-   @media screen and (min-width: $desktop) {
-   font-size: 16px;
-  line-height: 1.88;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.88;
   }
 }
 
 .contacts-cards__contacts-list {
-  
-  
+  position: relative;
   /*max-width: 179px;*/
   @media screen and (min-width: 768px) {
-    max-width: 157px;
+    // max-width: 157px;
     @media screen and (min-width: $desktop) {
-  /*max-width: 243px;*/
+      /*max-width: 243px;*/
+    }
   }
 }
-}
+
 .contacts-cards__contacts-link {
-  
   font-weight: 500;
   font-size: 12px;
   line-height: 1.5;
-
   color: $secondary-text-color;
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.81;
+  }
 }
 
+.contacts-cards__contacts-list::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  display: block;
+  height: 1px;
+  left: 0;
+  top: -25px;
+  background-color: #e1e1e1;
+}
 
+.contacts-cards__shedule-list::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  display: block;
+  height: 1px;
+  left: 0;
+  top: -25px;
+  background-color: #e1e1e1;
+}
 
+.dots-overlay {
+  @media screen and (min-width: $desktop) {
+    background-image: url('../images/png/contacts/section-contacts-bg@1x-min.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0% 70%;
+  }
+}
