--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -51,6 +51,7 @@
   height: 44px;
   border-radius: 22px;
   color: $accent-red-color;
+  transition: $trans-duration $trans-time-func;
 }
 .foot_button-franchise:hover {
   background-color: $icon-bkg-color2;
@@ -250,10 +251,10 @@
     text-transform: uppercase;
     color: $rose-text-color;
   }
-  .footer__container {
-    padding-right: 0;
-    padding-left: 0;
-  }
+  // .footer__container {
+  //   padding-right: 0;
+  //   padding-left: 0;
+  // }
   .foot_contacts {
     display: flex;
     justify-content: flex-end;
@@ -331,8 +332,6 @@
   .foot_main {
     display: flex;
     justify-content: space-between;
-    padding-right: 127px;
-    padding-left: 108px;
     margin-bottom: 91px;
   }
   .foot_list {
@@ -369,10 +368,10 @@
     text-transform: uppercase;
     color: $rose-text-color;
   }
-  .container {
-    padding-right: 0;
-    padding-left: 0;
-  }
+  // .container {
+  //   padding-right: 0;
+  //   padding-left: 0;
+  // }
   .foot_contacts {
     display: flex;
     justify-content: flex-end;
@@ -380,7 +379,7 @@
 
     &-phone {
       font-family: DM Sans;
-      font-size: 14px;
+      font-size: 16px;
       font-style: normal;
       font-weight: 500;
       line-height: 26px;
@@ -390,7 +389,7 @@
     }
     &-description {
       font-family: DM Sans;
-      font-size: 14px;
+      font-size: 16px;
       font-style: normal;
       font-weight: 700;
       line-height: 26px;
