--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 0 auto;
 
-  outline: 2px solid coral;
+  // outline: 2px solid coral;
 
   @media screen and (max-width: 479px) {
     // width: 280px;
