--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,5 +1,8 @@
-body {
+html {
+  scroll-behavior: smooth;
+}
 
+body {
   overflow-x: hidden;
   font-family: 'DM Sans', sans-serif;
   font-size: 12px;
@@ -14,7 +17,6 @@ body {
   @media screen and (min-width: 1200px) {
     font-size: 16px;
   }
-
 }
 
 img {
@@ -24,7 +26,6 @@ img {
 }
 
 ul,
-
 li,
 ol,
 h1,
@@ -32,7 +33,6 @@ h2,
 h3,
 p,
 button {
-
   margin: 0;
   padding: 0;
 }
