--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="head">
   <div class="header-container">
     <a href="./index.html" class="logo">
       <picture class="logo-picture">
