--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -5,6 +5,44 @@
     margin-left: auto;
     margin-right: auto;
 
+    .button-pozit {
+        position: fixed;
+        right: 30px;
+        bottom: 30px;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        margin: 0;
+        padding: 0;
+        border-radius: 50%;
+        border: 2px solid $bg-modal-color;
+        background: $bg-shakes-color;
+        z-index: 99999;
+        outline: 0;
+        transition: 0.4s;
+        cursor: pointer;
+    }
+
+    .button-pozit:after {
+        content: '';
+        width: 10px;
+        height: 10px;
+        border-top: 4px solid $bg-modal-color;
+        border-left: 4px solid $bg-modal-color;
+        transform: rotate(45deg);
+        position: absolute;
+        top: 4px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    .button-pozit.active {
+        bottom: 50px;
+    }
+
+
     @media screen and (min-width:768px) {
         padding-bottom: 139px;
     }
