--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,9 @@
 .page-header {
-  // position: absolute;
+  position: absolute;
+  left: 7%;
   // transform: translate();
 
-  background: teal;
+  background: transparent;
 }
 
 .page-header .container {
