--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,5 +1,7 @@
 .section-contacts {
   padding-bottom: 79px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 2000px;
   background-image: linear-gradient(to bottom,
       #ffffff 6%,
@@ -179,6 +181,15 @@
   margin-bottom: 10px;
   border: none;
   cursor: pointer;
+  outline: none;
+}
+.contacts-button-locations:hover,
+.contacts-button-locations:focus {
+  background-color:$bg-hoverbtn-product;
+}
+.contacts-button-franchise:hover,
+.contacts-button-franchise:focus {
+  background-color:$bg-hover-focus-color;
 }
 
 .contacts-button-franchise {
@@ -198,6 +209,7 @@
   display: block;
   margin: 0 auto;
   border: none;
+  outline: none;
 }
 
 
@@ -221,6 +233,8 @@
   display: block;
   margin: 0 auto;
   cursor: pointer;
+  outline: none;
+
 }
 
 .contacts-white-icon {
