--- a/src/sass/about-modal.scss
+++ b/src/sass/about-modal.scss
@@ -12,6 +12,7 @@
   border-radius: 22px;
   min-width: 176px;
   min-height: 44px;
+  outline: none;
   cursor: pointer;
   overflow: hidden;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -56,7 +57,7 @@
   height: 75%;
   max-width: 450px;
   max-height: 610px;
-  overflow: scroll;
+  overflow: hidden;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background: linear-gradient(#f0d6da, #ec8195);
