обнова галереи (неполная) + выписал проблемы
1. Поменял скругление и цвет тени при ховере.
2. Градиент почему-то не работает правильно, слишком плавно переходит(.
3. Картинки не тянуться при изменении ширины, а только изменяются на брейкпоинтах.
4. У .customer-reviews__wrappers  нужно убрать верхний паддинг, так как при различной ширине он меняется, а я это у себя прописал уже.
---
Кто-то пошаманил с моим кодом и он немного подлетел, но вроде всё починил.
---
Помогите починить проблемы пожалуйста🙏
---

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section id="gallery">
+<section id="about_us" class="gallery">
     <ul class="gallery-list">
         <li class="gallery-item">
           <div class="item-box image-top">
@@ -22,7 +22,7 @@
         <li class="gallery-item gallery-item-big">
           <div class="item-box image-top">
             <div class="item">
-              <img src="./images/gallery/1x/gallery-4.png" alt="ice-4"  class="item-image" width="284" height="284"/>
+              <img src="./images/gallery/1x/gallery-4.png" alt="ice-4"  class="item-image-big" />
             </div>
           </div>
           <div class="item-box image-bottom">
