--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,9 +1,16 @@
 ol,
 ul,
 li {
-    list-style: none;
+  list-style: none;
 }
 
+.gallery {
+  background: linear-gradient(
+    to bottom,
+    var(--bg-color-light) 40%,
+    #ffffff 60%
+  );
+}
 
 .gallery-list {
   position: relative;
@@ -11,44 +18,76 @@ li {
   z-index: 0;
   display: flex;
   align-items: center;
-  
+  width: 100%;
 
   justify-content: center;
 
-
-  width: 100%;
-  height: 0px;
-  margin-top: 20%;
-  margin-bottom: 19%;
-  background-color: #fff5f6;
+  @media screen and(min-width:320px) {
+    padding-bottom: 80px;
+  }
+  @media screen and(min-width:768px) {
+    padding-bottom: 120px;
+  }
+  @media screen and(min-width:1280px) {
+    padding-bottom: 124px;
+  }
 }
 
-
 .item-image {
-    z-index: -10;
+  @media screen and(min-width:320px) {
+    max-width: 40px;
+  }
+  @media screen and(min-width:768px) {
+    max-width: 84px;
+  }
+  @media screen and(min-width:1280px) {
+    max-width: 140px;
+  }
+}
+
+.item-image-big {
+  @media screen and(min-width:320px) {
+    max-width: 80px;
+  }
+  @media screen and(min-width:768px) {
+    max-width: 172px;
+  }
+  @media screen and(min-width:1280px) {
+    max-width: 284px;
+  }
+}
+
+.item-image,
+.item-image-big {
+  z-index: -10;
 }
 
 .item-image:hover,
-.item-image:focus {
-    transform: scale(1.5);
-    z-index: 1000;
-    border-radius: 30px;
-    box-shadow: 0px 0px 10px 10px rgba(212, 20, 67, 0.5);
-    transition-property: all;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.item-image-big:hover {
+  transform: scale(1.5);
+  z-index: 1000;
+  border-radius: 25%;
+  box-shadow: 0px 0px 10px 10px rgba(225, 121, 146, 0.5);
+  transition-property: all;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .gallery-item-top {
+  @media screen and(min-width:320px) {
+    margin-bottom: 16px;
+  }
+  @media screen and(min-width:768px) {
+    margin-bottom: 34px;
+  }
+  @media screen and(min-width:1280px) {
     margin-bottom: 54px;
   }
+}
 
-
-  .gallery-item:not(:last-child) {
-    margin-right: 5px;
-  }
-  .image-top {
-    margin-bottom: 5px;
-  }
-  
+.gallery-item:not(:last-child) {
+  margin-right: 5px;
+}
+.image-top {
+  margin-bottom: 5px;
+}
