--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -124,6 +124,45 @@
       display: flex;
       height: 399px;
     }
+
+    .dropdown {
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      // position: absolute;
+      background-color: $bg-modal-color;
+      min-width: 100%;
+      height: 50%;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      // z-index: 1;
+      bottom: 100%;
+      left: 0;
+      top: 50%;
+      border-radius: 24px;
+    }
+
+    .dropdown-description {
+      color: $text-white-color;
+      // text-decoration: none;
+      display: block;
+      font-family: DM Sans;
+      // font-style: normal;
+      font-weight: 700;
+      font-size: 8px;
+      line-height: 10px;
+      letter-spacing: 0.04em;
+      padding: 20px 15px;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .dropdown:focus-within .dropdown-content {
+      display: block;
+    }
   }
 
   .hero-description,
@@ -211,7 +250,9 @@
     height: 6px;
     fill: $text-red-color;
   }
+  // ================
 
+  // ===========
   .counter-box {
     position: absolute;
     bottom: 0;
@@ -284,6 +325,18 @@
     .header-container {
       height: 665px;
       padding: 0 112px;
+    }
+    .dropdown-description {
+      // color: $text-white-color;
+      // text-decoration: none;
+      // display: block;
+      // font-family: DM Sans;
+      // font-style: normal;
+      // font-weight: 700;
+      font-size: 14px;
+      line-height: 18px;
+      // letter-spacing: 0.04em;
+      padding: 30px 25px;
     }
   }
 
