--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,12 +13,18 @@
                 
                     <div class="hero-btn--s">  
                         <button class="btn__products" type="button">
-                            <span class="btn__title__products">Products</span>
-                            
+                           
+                            <a class="btn__title__products  link" href="#our-products-link">Our products</a>
+
+                            <!-- <span class="btn__title__products">Products</span> -->
+
                         </button>
 
                         <button class="btn__made" type="button">
-                            <span class="btn__title__made">How it’s made?</span>
+
+                            <a class="btn__title__made  link" href="#how-link">How it’s made?</a>
+
+                            <!-- <span class="btn__title__made">How it’s made?</span> -->
                             
                         </button>
                     </div>
