--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,7 +7,7 @@
         
     width: 209px;
     height: 44px;
-  
+   
     border-radius: 22px;
     border: 0;
     
@@ -141,14 +141,22 @@
   .btn__products:hover {
     background-color: var(--button-color-Prod);
   }
-
+////////////////////////////////////////////////////
 .btn__title__products {
   @include fw_fs_line-height-calc(400, 8, 10);
- 
+
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  height: 24px;
+  text-decoration: none;
+color: inherit;
   text-align: center;
 
   @media screen and (min-width: 1280px) {
     @include fw_fs_line-height-calc(400, 14, 18);
+    height: 40px;
   }
 }
 
@@ -181,14 +189,20 @@
 .btn__made:focus {
   background-color: var(--button-color-bn);
 }
-
+/////////////////////////////////////////////////////////
 .btn__title__made {
   @include fw_fs_line-height-calc(400, 8, 10);
- 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-
+height: 24px;
+text-decoration: none;
+color: inherit;
+text-align: center;
   @media screen and (min-width: 1280px) {
     @include fw_fs_line-height-calc(400, 14, 18);
+    height: 40px;
   }
   
 }
