--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -7,10 +7,26 @@
     background-size: 346px 344px;
     background-position: calc(100vw / 2 - 129px)  83px;
 
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+     
+        background-image: url('../images/hero/sircl/ellipse-mobile-pic-full@2x.png');
+    
+      }
+
     @media screen and (min-width: 768px) {
       background-image: url('../images/hero/sircl/ellipse-tablet-pic.png');
       background-size: 324px 322px;
       background-position: calc(100vw / 2 - 78px)  31px;
+
+      @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+     
+        background-image: url('../images/hero/sircl/ellipse-tablet-pic@2x.png');
+    
+      }
 
     }
 
@@ -19,9 +35,31 @@
       background-size: 538px 538px;
       background-position: calc(100vw / 2 - 170px)  52px;
 
+      @media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+ 
+    background-image: url('../images/hero/sircl/ellipse-desktop-pic@2x.png');
+
+  }
     }
 
 }
+
+////////////animation
+.hero:hover {
+  animation-name: zoom;
+  animation-duration: 3000ms;
+}
+@keyframes zoom {
+  0% { transform:scale(1,1); }
+  50% { transform:scale(1.2,1.2); }
+  100% {
+      transform:scale(1,1); 
+  }
+  }
+
+// and animation
 
 
 .container_hero  {
