--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,5 +1,10 @@
 .advantages {
   background-color: var(--backgroundPink);
+  @media screen and (min-width: 1280px) {
+    & {
+      background-color: #ffffff;
+    }
+  }
 }
 
 @media screen and (max-width: 767px) {
