--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,5 +1,10 @@
 .about-section {
   background-color: var(--backgroundPink);
+  @media screen and (min-width: 1280px) {
+    & {
+      background-color: #ffffff;
+    }
+  }
 }
 
 .about {
