--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="about-section" id="how-link">
-    <div class="container">
+    <div class="about-container">
 
         <p class="about-label">Tradition and love</p>
         <h2 class="about-title">How it's made</h2>
