добавила анимацию на лого и тайтл героя

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,7 +2,7 @@
 <section class="about" id="how-made">
   <div class="about-container">
     <p class="about-label-title">tradition and love</p>
-    <h2 class="about-title">how it’s made?</h2>
+    <h2 class="about-title animate__flash">how it’s made?</h2>
     <div class="about-flex">
       <div class="about-left-side">
         <picture>
