--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -50,6 +50,13 @@ screen and (min-resolution: 2dppx) {
   color: #d41443;
   margin: 0;
   margin-bottom: 26px;
+  animation-duration: 1000ms;
+  animation-iteration-count: 3;
+}
+.about-title:hover,
+.about-title:focus {
+ animation-duration: 1000ms;
+  animation-iteration-count: 3; 
 }
 
 .about-right-side {
