--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -16,7 +16,9 @@
 .buy {
   display: none;
 }
-
+.logo {
+  animation-duration: 2000ms;
+}
 .logo-picture {
   display: inline-block;
   max-width: 199px;
