--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -40,6 +40,7 @@
   color: $text-white-color;
   max-width: 220px;
   margin-bottom: 20px;
+  animation-duration: 1000ms;
 }
 
 .hero-title-accent {
