--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -239,7 +239,7 @@
       width: 26px;
       height: 26px;
       border-radius: 50%;
-      outline: none;
+      outline: transparent;
       border: none;
       cursor: pointer;
     }
@@ -250,6 +250,7 @@
       fill: $text-red-color;
     }
   }
+
   // ================
 
   // ===========
@@ -326,6 +327,7 @@
       height: 665px;
       padding: 0 112px;
     }
+
     .dropdown-description {
       // color: $text-white-color;
       // text-decoration: none;
@@ -411,7 +413,7 @@
       margin-bottom: 20px;
     }
 
-    .button {
+    .button-arrow {
       padding: 0;
       width: 26px;
       height: 26px;
