--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -145,23 +145,24 @@ header{
         width: 100%;
         max-width: 250px;
         height: 100vh;
+        max-height: 502px;
         background-color: var(--mobile-menu-bg-color);
         box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
         padding-top: 60px;
-        z-index: 3;
+        z-index: 150;
     
-        position: absolute;
+        position: fixed;
         top: 0;
-        left: 50%;
+        right: 0;
     
-        transform: translateX(-50%) translateY(-101%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+        transform: translateX(100%); 
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);    
         opacity: 0;
         pointer-events: none;
       
         &.is-open{
             opacity: 1;
-            transform: translateX(-50%) translateY(0%);
+            transform: translateX(0%);
             pointer-events: auto;
         }
         &-btn {
@@ -190,6 +191,13 @@ header{
             }
         }
     }
+
+    @media screen and (min-width: 768px) {
+        .mobile-menu {
+            max-width: 254px;
+            max-height: 1020px;
+        }
+    }
     
     .mobile-menu-button-wrapper {
         display: flex;
@@ -214,7 +222,8 @@ header{
 
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        &:focus{
+        &:focus, 
+        &:hover {
             color: var(--dark-pink);
         }
     }
@@ -243,11 +252,7 @@ header{
     
         position: absolute;
         top: 15px;
-        right: 18px;
+        right: 19px;
     }
-    
-
-
-    
 }
 
