--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -181,6 +181,12 @@ header{
             padding-right: 70px;
             
             position: relative;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+            &:hover,
+            &:focus {
+                background-color: var(--accent) ;
+            }
     
             &-icon {
                 width: 20%;
